2004-11-04 Alain Magloire
	Fix for 77825 from (Mikhail Voronin)
	* src/org/eclipse/cdt/internal/ui/text/CHelpProviderDescriptor.java

2004-11-02 Tanya Wolff
	Fixed content assist extensibility for 77482 - changed context condition 
	for addProposalsFromCompletionContributors() & 	fixed cursor position
	* src/org/eclipse/cdt/internal/ui/text/contentassist/CCompletionProcessor.java

2004-11-01 Alain Magloire
	Patch from Mikhail Voronin to implement 71240.
	Too many changes to enumerate refer to PR:
		https://bugs.eclipse.org/bugs/show_bug.cgi?id=71240

2004-10-14 Alain Magloire

	Provide the hashCode method.
	* src/org/eclipse/cdt/internal/ui/cview/IncludeRefContainer.java

2004-09-24 Chris Wiebe

	minor icon cleanup
	* icons/full/dtool16/opentype.gif
	* icons/full/etool16/opentype.gif
	* icons/full/obj16/bin_obj.gif
	* plugin.xml

2004-09-24 Chris Wiebe

	remove obsolete classes
	* src/org/eclipse/cdt/internal/ui/wizards/BaseClassSelectionDialog.java
	* src/org/eclipse/cdt/internal/ui/wizards/OpenNewFileWizardAction.java
	* src/org/eclipse/cdt/internal/ui/wizards/OpenNewFolderWizardAction.java
	* src/org/eclipse/cdt/ui/wizards/NewClassWizard.java
	* src/org/eclipse/cdt/ui/wizards/NewClassWizardPage.java

2004-09-24 Chris Wiebe

	new folder wizards
	* browser/org/eclipse/cdt/internal/ui/browser/cbrowsing/CBrowsingPerspectiveFactory.java
	* icons/full/ctool16/newsrcfldr_wiz.gif
	* icons/full/dtool16/newsrcfldr_wiz.gif
	* icons/full/etool16/newsrcfldr_wiz.gif
	* icons/full/wizban/newsrcfldr_wiz.gif
	* src/org/eclipse/cdt/internal/ui/CPerspectiveFactory.java
	* src/org/eclipse/cdt/internal/ui/CPluginImages.java
	* src/org/eclipse/cdt/internal/ui/ICHelpContextIDs.java
	* src/org/eclipse/cdt/internal/ui/wizards/CWizardRegistry.java
	* src/org/eclipse/cdt/internal/ui/wizards/NewFolderDropDownAction.java
	* src/org/eclipse/cdt/internal/ui/wizards/folderwizard/NewFolderWizardMessages.java