@@ -19,10 +19,12 @@ NewClassCreationWizardPage.error.SelectedProjectError=Error in determining the s
 NewClassCreationWizardPage.error.DefaultSourceFolderError=Error in determining the default source folder.
 NewClassCreationWizardPage.error.NotAvailableForNonCppProjects= The wizard is not available for non C++ projects.
 
-NewClassCreationWizardPage.getClasses.exception.title=Exception
-NewClassCreationWizardPage.getClasses.exception.message=Unexpected exception. See log for details.
-NewClassCreationWizardPage.getClasses.noclasses.title=Class Selection
-NewClassCreationWizardPage.getClasses.noclasses.message=No classes available.
+NewClassCreationWizardPage.getTypes.exception.title=Exception
+NewClassCreationWizardPage.getTypes.exception.message=Unexpected exception. See log for details.
+NewClassCreationWizardPage.getTypes.noClasses.title=Class Selection
+NewClassCreationWizardPage.getTypes.noClasses.message=No classes available.
+NewClassCreationWizardPage.getTypes.noNamespaces.title=Namespace Selection
+NewClassCreationWizardPage.getTypes.noNamespaces.message=No namespaces available.
 
 NewClassCreationWizardPage.sourceFolder.label=Source &Folder:
 NewClassCreationWizardPage.sourceFolder.button=Br&owse...
@@ -33,7 +35,8 @@ NewClassCreationWizardPage.error.ProjectClosed=Project ''{0}'' must be accessibl
 NewClassCreationWizardPage.warning.NotACProject=Folder is not a C/C++ project.
 NewClassCreationWizardPage.warning.NotInACProject=Folder is not in a C/C++ project.
 
-NewClassCreationWizardPage.enclosingType.label=&Enclosing Type:
+# NewClassCreationWizardPage.enclosingType.label=&Enclosing Type:
+NewClassCreationWizardPage.enclosingType.label=&Enclosing Namespace:
 NewClassCreationWizardPage.enclosingType.namespace=Namespace
 NewClassCreationWizardPage.enclosingType.class=Class
 NewClassCreationWizardPage.enclosingType.button=Bro&wse...
